--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,19 @@
+# Dependencies
+node_modules
+.pnpm-store
+
+# Build outputs
+dist
+dist-ssr
+build
+*.local
+
+# Environment
+.env
+.env.local
+.env.*.local
+!.env.docker
+
 # Logs
 logs
 *.log
@@ -7,13 +23,7 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
-.env
-
-# Editor directories and files
+# Editor
 .vscode/*
 !.vscode/extensions.json
 .idea
@@ -23,3 +33,12 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Cache
+.cache
+.turbo
+.eslintcache
