--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -2,7 +2,7 @@
   "name": "server",
   "description": "Satellite Pass Predictor - Proxy Server",
   "private": true,
-  "version": "1.0.0",
+  "version": "1.2.0",
   "scripts": {
     "start": "node server.js",
     "dev": "node --watch server.js",
@@ -12,7 +12,8 @@
     "axios": "^1.12.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "satellite.js": "^6.0.1"
   },
   "engines": {
     "node": ">=18.0.0"
