--- a/apps/server/Dockerfile
+++ b/apps/server/Dockerfile
@@ -1,6 +1,21 @@
 # Dockerfile for Server (Proxy)
 FROM node:22-alpine
 
+ARG VERSION=dev
+ARG BUILD_DATE
+ARG VCS_REF
+
+LABEL org.opencontainers.image.title="Satellite Pass Predictor - Proxy Server" \
+      org.opencontainers.image.description="N2YO API Proxy Server" \
+      org.opencontainers.image.version="${VERSION}" \
+      org.opencontainers.image.created="${BUILD_DATE}" \
+      org.opencontainers.image.revision="${VCS_REF}" \
+      org.opencontainers.image.authors="webusov" \
+      org.opencontainers.image.vendor="webusov" \
+      maintainer="webusov"
+
+ENV APP_VERSION=${VERSION}
+
 WORKDIR /app
 
 # Установка wget для health check
