--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "server",
-  "description": "Satellite Pass Predictor - Proxy Server",
-  "private": true,
+  "name": "@satellite/server",
+  "description": "Satellite Pass Predictor - Server",
   "version": "1.3.1",
+  "license": "MIT",
+  "author": "Alex Usov <web.usov@ya.ru>",
   "scripts": {
     "start": "node server.js",
     "dev": "node --watch server.js",
