fix: Specify exact files for tar archive instead of current directory
- Replace '.' with specific files and directories
- Add --exclude=*.tar.gz to avoid archiving the archive itself
- Fix 'file changed as we read it' error

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,7 +34,19 @@ jobs:
             --exclude=.git \
             --exclude=dist \
             --exclude=.env* \
-            .
+            --exclude=*.tar.gz \
+            apps/ \
+            .github/ \
+            *.json \
+            *.md \
+            *.yml \
+            *.yaml \
+            *.sh \
+            *.js \
+            *.ts \
+            LICENSE \
+            docker-compose*.yml \
+            .dockerignore
             
       - name: Create Release
         uses: softprops/action-gh-release@v2
