fix: Remove non-existent file patterns from tar command
- Remove *.ts pattern (no .ts files in root)
- Add specific files that actually exist: .gitignore, pnpm-workspace.yaml, tsconfig*.json, eslint.config.js, public/
- Fix 'Cannot stat: No such file or directory' error

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,10 +43,14 @@ jobs:
             *.yaml \
             *.sh \
             *.js \
-            *.ts \
             LICENSE \
             docker-compose*.yml \
-            .dockerignore
+            .dockerignore \
+            .gitignore \
+            pnpm-workspace.yaml \
+            tsconfig*.json \
+            eslint.config.js \
+            public/
             
       - name: Create Release
         uses: softprops/action-gh-release@v2
